[package]
name = "task_repo"
version = "0.1.0"
authors = ["Szymon Kozłowski <szymek.kozlowski1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.7"
tokio = { version = "0.2", features = ["full"] }
rand = "0.5.0"
serde_json = "1.0.57"
